# cybrosys

./: README.md
odoo-bringout-cybrosys-hr_payroll_input_add/: README.md  pyproject.toml
odoo-bringout-cybrosys-hr_payroll_input_add/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-cybrosys-ohrms_loan/: README.md  pyproject.toml
odoo-bringout-cybrosys-ohrms_loan/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  SECURITY.md  USAGE.md
odoo-bringout-cybrosys-order_line_sequences/: README.md  pyproject.toml
odoo-bringout-cybrosys-order_line_sequences/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-cybrosys-product_brand_ecommerce/: README.md  pyproject.toml
odoo-bringout-cybrosys-product_brand_ecommerce/doc/: ARCHITECTURE.md  CONFIGURATION.md  DEPENDENCIES.md  FAQ.md  INSTALL.md  MODELS.md  OVERVIEW.md  USAGE.md
odoo-bringout-cybrosys-product_brand_inventory/: README.md  pyproject.toml
odoo-bringout-cybrosys-product_brand_inventory/doc/: ARCHITECTURE.md  CONFIGURATION.md  FAQ.md  (+5 more)
odoo-bringout-cybrosys-product_brand_invoicing/: README.md  pyproject.toml
odoo-bringout-cybrosys-product_brand_purchase/: README.md  pyproject.toml
odoo-bringout-cybrosys-product_brand_sale/: README.md  pyproject.toml
odoo-bringout-cybrosys-stock_move_invoice/: README.md  pyproject.toml
odoo-bringout-cybrosys-warehouse_reports/: README.md  pyproject.toml
(+44 files in other folders)
